--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -5,15 +5,29 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Setup python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.11.3
+          python-version: 3.6
 
       - name: Install tools
-        run: python -m pip install --upgrade pip pytest
+        run: |
+          python -m pip install --upgrade pip pytest
+          pip install coverage                          
 
       - name: Test with unittest
         run: python3 -m unittest test.py
+          
+      - name: Check code coverage                       
+        run: |
+          python3 -m coverage run -m unittest test.py
+          python3 -m coverage report
+          python3 -m coverage html
+          
+      - name: Archive code coverage HTML report
+        uses: actions/upload-artifact@v2
+        with:
+           name: code-coverage-report
+           path: htmlcov
